--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -2897,7 +2897,7 @@ Error text: {1}</value>
     <value> For enabling this setting you need to uncheck "Open Obi in maximize state". Do you want to continue?(Recommended)</value>
   </data>
   <data name="Project_SaveTOCViewWidth" xml:space="preserve">
-    <value>Fix TOC View width</value>
+    <value>Freeze TOC View width</value>
   </data>
   <data name="RecordingToolbar_SwitchLoadedProfile" xml:space="preserve">
     <value>Switch to {0}</value>
